--- a/v0.18/backend/backend/public/index.html
+++ b/v0.18/backend/backend/public/index.html
@@ -1,121 +1,189 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>AI Platform — v0.17</title>
+  <meta charset="utf-8" />
+  <title>AI Platform — INL Chat</title>
   <style>
     body {
       margin: 0;
-      font-family: system-ui, sans-serif;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
       background: #0b0e11;
       color: #e6e6e6;
-    }
-
-    .app {
       display: grid;
-      grid-template-columns: 420px 1fr;
+      grid-template-columns: 320px 1fr;
       height: 100vh;
     }
-
-    .controls {
-      padding: 20px;
+    #sidebar {
       border-right: 1px solid #222;
-      background: #0f1318;
+      padding: 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      overflow: auto;
     }
-
-    label {
-      display: block;
-      margin-top: 12px;
+    #chat {
+      flex: 1;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+    .msg {
+      padding: 8px 10px;
+      border-radius: 8px;
       font-size: 13px;
-      opacity: 0.85;
+      line-height: 1.4;
     }
-
-    input, select, button {
-      width: 100%;
-      margin-top: 6px;
+    .user { background: #1b2633; }
+    .ai { background: #11161d; }
+    #input {
+      display: flex;
+      gap: 6px;
+    }
+    #input input {
+      flex: 1;
       padding: 8px;
-      background: #111;
+      border-radius: 6px;
+      border: none;
+      background: #11161d;
       color: #e6e6e6;
-      border: 1px solid #333;
     }
-
-    button {
-      margin-top: 16px;
+    #input button {
+      padding: 8px 12px;
+      border-radius: 6px;
+      border: none;
+      background: #2563eb;
+      color: white;
       cursor: pointer;
     }
-
-    .preview {
-      background: #fff;
-      color: #000;
+    #pages {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      margin-bottom: 8px;
     }
-
+    #pages button {
+      text-align: left;
+      padding: 6px;
+      background: #0f172a;
+      border: 1px solid #1f2937;
+      color: #e6e6e6;
+      border-radius: 4px;
+      cursor: pointer;
+    }
     iframe {
       width: 100%;
       height: 100%;
       border: none;
+      background: white;
+    }
+    #preview {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+    #previewHeader {
+      padding: 6px 10px;
+      background: #0f172a;
+      border-bottom: 1px solid #222;
+      font-size: 12px;
     }
   </style>
 </head>
 <body>
+  <div id="sidebar">
+    <strong>INL Chat</strong>
 
-<div class="app">
-  <div class="controls">
-    <h2>Site Generator (v0.17)</h2>
+    <div id="pages"></div>
 
-    <label>
-      Prompt
-      <input id="prompt" value="MAKE A WEBSITE ABOUT CATS" />
-    </label>
+    <div id="chat"></div>
 
-    <label>
-      Quality
-      <select id="quality">
-        <option value="basic">Basic</option>
-        <option value="detailed">Detailed</option>
-        <option value="professional">Professional</option>
-        <option value="marketing">Marketing</option>
-      </select>
-    </label>
-
-    <label>
-      Tone
-      <select id="tone">
-        <option value="neutral">Neutral</option>
-        <option value="friendly">Friendly</option>
-        <option value="formal">Formal</option>
-      </select>
-    </label>
-
-    <button onclick="generate()">Generate Site</button>
+    <div id="input">
+      <input id="text" placeholder="Type anything… generate or refine website" />
+      <button onclick="send()">Send</button>
+    </div>
   </div>
 
-  <div class="preview">
+  <div id="preview">
+    <div id="previewHeader">Preview</div>
     <iframe id="frame"></iframe>
   </div>
-</div>
 
 <script>
-async function generate() {
-  const res = await fetch("/generate-site", {
+let state = {
+  site: null,
+  revision: null,
+  pages: [],
+  activePage: null
+};
+
+const chat = document.getElementById("chat");
+const pagesDiv = document.getElementById("pages");
+const frame = document.getElementById("frame");
+const previewHeader = document.getElementById("previewHeader");
+
+function addMsg(text, cls) {
+  const d = document.createElement("div");
+  d.className = "msg " + cls;
+  d.textContent = text;
+  chat.appendChild(d);
+  chat.scrollTop = chat.scrollHeight;
+}
+
+function renderPages() {
+  pagesDiv.innerHTML = "";
+  state.pages.forEach(p => {
+    const b = document.createElement("button");
+    b.textContent = p.slug + ".html";
+    b.onclick = () => {
+      state.activePage = p.slug;
+      updatePreview();
+    };
+    pagesDiv.appendChild(b);
+  });
+}
+
+function updatePreview() {
+  if (!state.pages.length) return;
+
+  const active =
+    state.pages.find(p => p.slug === state.activePage) ||
+    state.pages.find(p => p.slug === "index") ||
+    state.pages[0];
+
+  if (!active) return;
+
+  state.activePage = active.slug;
+  frame.src = active.href;
+  previewHeader.textContent = "Preview — " + active.slug + ".html";
+}
+
+async function send() {
+  const input = document.getElementById("text");
+  const text = input.value.trim();
+  if (!text) return;
+
+  input.value = "";
+  addMsg(text, "user");
+
+  const res = await fetch("/chat", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      prompt: document.getElementById("prompt").value,
-      intent: {
-        quality: document.getElementById("quality").value,
-        tone: document.getElementById("tone").value
-      }
-    })
+    body: JSON.stringify({ message: text, state })
   });
 
   const data = await res.json();
 
-  const html = data.files["index.html"];
-  const iframe = document.getElementById("frame");
+  if (data.assistant?.content) {
+    addMsg(data.assistant.content, "ai");
+  }
 
-  iframe.srcdoc = html;
+  if (data.state) {
+    state = data.state;
+    renderPages();
+    updatePreview();
+  }
 }
 </script>
-
 </body>
 </html>
