--- a/v0.19/backend/public/index.html
+++ b/v0.19/backend/public/index.html
@@ -1,165 +1,165 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-<meta charset="utf-8" />
-<title>AI Platform v0.19</title>
+  <meta charset="utf-8" />
+  <title>AI Platform v0.19</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: #0b0e11;
+      color: #e6e6e6;
+      display: flex;
+      height: 100vh;
+    }
 
-<style>
-body {
-  margin: 0;
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-  background: #0f172a;
-  color: #e5e7eb;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-header {
-  padding: 12px 16px;
-  border-bottom: 1px solid #1e293b;
-  font-weight: 600;
-}
-#main {
-  flex: 1;
-  display: flex;
-  overflow: hidden;
-}
-#chatPane {
-  width: 40%;
-  min-width: 360px;
-  border-right: 1px solid #1e293b;
-  display: flex;
-  flex-direction: column;
-}
-#chat {
-  flex: 1;
-  overflow-y: auto;
-  padding: 16px;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-.message {
-  max-width: 90%;
-  padding: 12px 14px;
-  border-radius: 8px;
-}
-.user { align-self: flex-end; background: #2563eb; color: white; }
-.assistant { align-self: flex-start; background: #1e293b; }
-form {
-  border-top: 1px solid #1e293b;
-  padding: 12px;
-  display: flex;
-  gap: 8px;
-}
-textarea {
-  flex: 1;
-  resize: none;
-  padding: 10px;
-  border-radius: 6px;
-  border: none;
-  outline: none;
-  font-size: 14px;
-  background: #020617;
-  color: #e5e7eb;
-  height: 48px;
-}
-button {
-  padding: 0 16px;
-  border-radius: 6px;
-  border: none;
-  background: #22c55e;
-  color: #020617;
-  font-weight: 600;
-  cursor: pointer;
-}
-#previewPane {
-  flex: 1;
-  background: #020617;
-  display: flex;
-  flex-direction: column;
-}
-#previewHeader {
-  padding: 10px 14px;
-  border-bottom: 1px solid #1e293b;
-  font-size: 13px;
-  color: #94a3b8;
-  display: flex;
-  gap: 12px;
-  align-items: center;
-}
-iframe {
-  flex: 1;
-  border: none;
-  background: white;
-}
-</style>
+    #chat {
+      width: 40%;
+      display: flex;
+      flex-direction: column;
+      border-right: 1px solid #222;
+    }
+
+    #messages {
+      flex: 1;
+      padding: 16px;
+      overflow-y: auto;
+      font-size: 14px;
+    }
+
+    .msg { margin-bottom: 10px; }
+    .user { color: #7dd3fc; }
+    .ai { color: #a7f3d0; }
+
+    #inputBar {
+      display: flex;
+      border-top: 1px solid #222;
+    }
+
+    #input {
+      flex: 1;
+      padding: 12px;
+      background: #111;
+      color: #fff;
+      border: none;
+      outline: none;
+    }
+
+    button {
+      padding: 0 18px;
+      background: #2563eb;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    #preview {
+      flex: 1;
+      background: #ffffff;
+      color: #000;
+      padding: 40px;
+      overflow-y: auto;
+    }
+
+    section {
+      margin-bottom: 40px;
+    }
+  </style>
 </head>
-
 <body>
 
-<header>AI Platform v0.19</header>
-
-<div id="main">
-
-  <div id="chatPane">
-    <div id="chat"></div>
-    <form id="form">
-      <textarea id="input" placeholder="Message AI Platform…" required></textarea>
-      <button type="submit">Send</button>
-    </form>
+<div id="chat">
+  <div id="messages"></div>
+  <div id="inputBar">
+    <input id="input" placeholder="Describe or refine your site..." />
+    <button onclick="send()">Send</button>
   </div>
+</div>
 
-  <div id="previewPane">
-    <div id="previewHeader">
-      <span id="siteLabel">Site: —</span>
-      <span id="revisionLabel">Revision: —</span>
-    </div>
-    <iframe id="preview"></iframe>
-  </div>
-
+<div id="preview">
+  <em>No site yet.</em>
 </div>
 
 <script>
-const chat = document.getElementById("chat");
-const form = document.getElementById("form");
-const input = document.getElementById("input");
-const preview = document.getElementById("preview");
-const siteLabel = document.getElementById("siteLabel");
-const revisionLabel = document.getElementById("revisionLabel");
+let currentSpec = null;
 
-function addMessage(role, text) {
+const messages = document.getElementById("messages");
+const preview = document.getElementById("preview");
+
+function addMsg(text, cls) {
   const div = document.createElement("div");
-  div.className = "message " + role;
+  div.className = "msg " + cls;
   div.textContent = text;
-  chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
+  messages.appendChild(div);
+  messages.scrollTop = messages.scrollHeight;
 }
 
-form.addEventListener("submit", async (e) => {
-  e.preventDefault();
+function renderValue(value, container) {
+  if (typeof value === "string") {
+    const p = document.createElement("p");
+    p.textContent = value;
+    container.appendChild(p);
+  }
+  else if (Array.isArray(value)) {
+    value.forEach(v => renderValue(v, container));
+  }
+  else if (typeof value === "object" && value !== null) {
+    Object.values(value).forEach(v => renderValue(v, container));
+  }
+}
 
-  const message = input.value.trim();
-  if (!message) return;
+function render(spec) {
+  preview.innerHTML = "";
 
-  addMessage("user", message);
+  if (!spec || !spec.pages) {
+    preview.innerHTML = "<em>Empty page</em>";
+    return;
+  }
+
+  const pageKey = Object.keys(spec.pages)[0];
+  const page = spec.pages[pageKey];
+
+  const h1 = document.createElement("h1");
+  h1.textContent = page.title || page.name || "Untitled Page";
+  preview.appendChild(h1);
+
+  if (!Array.isArray(page.sections)) {
+    preview.innerHTML += "<em>Empty page</em>";
+    return;
+  }
+
+  page.sections.forEach(section => {
+    const s = document.createElement("section");
+    renderValue(section, s);
+    preview.appendChild(s);
+  });
+}
+
+async function send() {
+  const input = document.getElementById("input");
+  const text = input.value.trim();
+  if (!text) return;
+
   input.value = "";
+  addMsg(text, "user");
 
   const res = await fetch("/chat", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ message })
+    body: JSON.stringify({ message: text })
   });
 
   const data = await res.json();
-  addMessage("assistant", data.message);
+  currentSpec = data.spec;
 
-  siteLabel.textContent = "Site: " + data.site;
-  revisionLabel.textContent = "Revision: " + data.revision;
+  addMsg("Updated site", "ai");
+  render(currentSpec);
+}
 
-  // ✅ DIRECT, GUARANTEED PATH
-  preview.src = `/builds/${data.site}/${data.revision}/${data.page || "home"}.html`;
-});
+document.getElementById("input")
+  .addEventListener("keydown", e => {
+    if (e.key === "Enter") send();
+  });
 </script>
 
 </body>
