--- a/v0.20/backend/public/index.html
+++ b/v0.20/backend/public/index.html
@@ -1,160 +1,117 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <title>AI Platform v0.20</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8"/>
+  <title>AI Platform</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <style>
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: #0b0e11;
-      color: #e6e6e6;
-      height: 100vh;
-      display: flex;
-    }
-    .sidebar {
-      width: 360px;
-      border-right: 1px solid #1f2430;
-      display: flex;
-      flex-direction: column;
-    }
-    .header {
-      padding: 14px 16px;
-      font-weight: 700;
-      border-bottom: 1px solid #1f2430;
-    }
-    .messages {
-      flex: 1;
-      padding: 12px 16px;
-      overflow-y: auto;
-    }
-    .msg {
-      margin-bottom: 10px;
-      font-size: 14px;
-      color: #cbd5f5;
-    }
-    .inputRow {
-      padding: 12px;
-      border-top: 1px solid #1f2430;
-      display: flex;
-      gap: 8px;
-    }
-    input {
-      flex: 1;
-      background: #111827;
-      border: 1px solid #1f2430;
-      color: #e6e6e6;
-      padding: 10px 12px;
-      border-radius: 8px;
-      outline: none;
-    }
-    button {
-      background: #8b5cf6;
-      border: none;
-      color: white;
-      padding: 10px 14px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 600;
-    }
-    .preview {
-      flex: 1;
-      position: relative;
-    }
-    iframe {
-      border: none;
-      width: 100%;
-      height: 100%;
-      background: #0b0e11;
-    }
-    .loading {
-      position: absolute;
-      inset: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 14px;
-      color: #9ca3af;
-      background: rgba(11,14,17,0.6);
-      pointer-events: none;
-      opacity: 0;
-      transition: opacity .15s ease;
-    }
-    .loading.show { opacity: 1; }
+    body{margin:0;background:#0b0e11;color:#e6e6e6;font-family:system-ui}
+    .app{display:flex;height:100vh}
+    .chat{width:380px;border-right:1px solid #1f2430;display:flex;flex-direction:column}
+    .messages{flex:1;overflow:auto;padding:16px}
+    .msg{margin-bottom:12px;padding:10px 12px;border-radius:12px;max-width:92%}
+    .user{background:#1f2937;margin-left:auto}
+    .assistant{background:#151922;color:#cbd5f5}
+    .input{display:flex;gap:8px;padding:12px;border-top:1px solid #1f2430}
+    input{flex:1;padding:10px;border-radius:10px;border:1px solid #333;background:#0b0e11;color:#fff}
+    button{padding:10px 14px;border-radius:10px;border:0;background:#2563eb;color:#fff;cursor:pointer}
+    button:disabled{opacity:.6}
+    iframe{flex:1;border:0;background:#000}
+    .status{opacity:.7;font-size:13px;margin-top:4px}
   </style>
 </head>
 <body>
-  <div class="sidebar">
-    <div class="header">AI Platform</div>
+
+<div class="app">
+  <div class="chat">
     <div id="messages" class="messages"></div>
-    <div class="inputRow">
-      <input id="input" placeholder="Describe or refine your site…" />
+    <div class="input">
+      <input id="prompt" placeholder="Describe your website or a change…" />
       <button id="send">Send</button>
     </div>
   </div>
+  <iframe id="preview"></iframe>
+</div>
 
-  <div class="preview">
-    <div id="loading" class="loading">Updating preview…</div>
-    <iframe id="frame" src="/builds/default/index.html"></iframe>
-  </div>
+<script>
+const messages = document.getElementById("messages");
+const input = document.getElementById("prompt");
+const sendBtn = document.getElementById("send");
+const preview = document.getElementById("preview");
 
-  <script>
-    const messagesEl = document.getElementById("messages");
-    const inputEl = document.getElementById("input");
-    const sendBtn = document.getElementById("send");
-    const frame = document.getElementById("frame");
-    const loading = document.getElementById("loading");
+let currentPage = "index";
 
-    function addMessage(text) {
-      const div = document.createElement("div");
-      div.className = "msg";
-      div.textContent = text;
-      messagesEl.appendChild(div);
-      messagesEl.scrollTop = messagesEl.scrollHeight;
-    }
+function addMessage(text, role="assistant"){
+  const div = document.createElement("div");
+  div.className = "msg " + role;
+  div.textContent = text;
+  messages.appendChild(div);
+  messages.scrollTop = messages.scrollHeight;
+}
 
-    async function refreshPreview() {
-      loading.classList.add("show");
-      try {
-        await fetch("/export", { method: "POST" });
-        // Bust cache by changing iframe src
-        frame.src = "/builds/default/index.html?ts=" + Date.now();
-      } catch (e) {
-        console.error("Export failed", e);
-      } finally {
-        loading.classList.remove("show");
-      }
-    }
+function detectPageIntent(text){
+  const t = text.toLowerCase();
+  if(t.includes("home")) return "index";
+  if(t.includes("about")) return "about";
+  if(t.includes("gallery")) return "gallery";
+  if(t.includes("contact")) return "contact";
+  if(t.includes("dog breeds") || t.includes("breeds")) return "dog-breeds";
+  return null;
+}
 
-    async function sendMessage() {
-      const text = inputEl.value.trim();
-      if (!text) return;
+async function send(){
+  const text = input.value.trim();
+  if(!text) return;
 
-      inputEl.value = "";
-      addMessage(text);
+  addMessage(text, "user");
+  input.value = "";
+  sendBtn.disabled = true;
 
-      loading.classList.add("show");
+  const target = detectPageIntent(text);
+  if(target) currentPage = target;
 
-      try {
-        await fetch("/chat", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ message: text })
-        });
+  try {
+    addMessage("Thinking…");
 
-        await refreshPreview();
-      } catch (e) {
-        console.error("Chat failed", e);
-        loading.classList.remove("show");
-      }
-    }
-
-    sendBtn.onclick = sendMessage;
-    inputEl.addEventListener("keydown", e => {
-      if (e.key === "Enter") sendMessage();
+    // Chat
+    const chat = await fetch("/chat", {
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body: JSON.stringify({ message: text })
     });
-  </script>
+    if(!chat.ok) throw new Error("Chat failed");
+
+    // Export
+    const exp = await fetch("/export", { method:"POST" });
+    if(!exp.ok) throw new Error("Export failed");
+
+    // Update preview
+    preview.src =
+      "/builds/default/index.html?page=" +
+      currentPage +
+      "&ts=" + Date.now();
+
+    // Assistant confirmation
+    addMessage(
+      target
+        ? `Updated the ${target.replace("-", " ")} page.`
+        : "Updated the site."
+    );
+
+  } catch (e){
+    addMessage("⚠️ " + e.message);
+  } finally {
+    sendBtn.disabled = false;
+  }
+}
+
+sendBtn.onclick = send;
+input.onkeydown = e => { if(e.key === "Enter") send(); };
+
+// Initial load
+preview.src = "/builds/default/index.html?page=index&ts=" + Date.now();
+addMessage("Hi! Describe a website to generate, or tell me what to change.");
+</script>
+
 </body>
 </html>
